collatz/base/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: collatz
  name: collatz-backend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  selector:
    matchLabels:
      deployment: collatz-backend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: collatz-backend
    spec:
      containers:
        - image: collatz-backend:latest
          imagePullPolicy: IfNotPresent
          name: collatz-backend
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
