collatz/base/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: collatz
  name: collatz-frontend
spec:
  progressDeadlineSeconds: 600
  replicas: 4
  selector:
    matchLabels:
      deployment: collatz-frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        deployment: collatz-frontend
    spec:
      containers:
        - image: collatz-frontend:latest
          imagePullPolicy: IfNotPresent
          name: collatz-frontend
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
