collatz/base/serverless-backend.yaml
kind: Service
apiVersion: serving.knative.dev/v1
metadata:
  name: ksvc-collatz-backend
spec:
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: ksvc-collatz-backend
        app.kubernetes.io/instance: ksvc-collatz-backend
        app.openshift.io/runtime-version: latest
        org: wanja.org
    spec:
      containerConcurrency: 0
      containers:
        - image: >-
            image-registry.openshift-image-registry.svc:5000/aodf/prod-collatz-backend
          imagePullPolicy: IfNotPresent
          name: ksvc-collatz-backend
          ports:
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            successThreshold: 1
            tcpSocket:
              port: 0
          resources: {}
      enableServiceLinks: false
      timeoutSeconds: 300
  traffic:
    - latestRevision: true
