collatz/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: collatz
  name: collatz
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: collatz-frontend
    weight: 100
  wildcardPolicy: None
